2011-04-06   D. V. Wiebe <getdata@ketiltrout.net> svn:574
	* test/: Remove the unnecessarily baroque (rococo?) __TEST__ macro.
	Add rmdirfile() to the top of each test before creating the test
	dirfile.  Shift definitions to the top of the files for C89 compliance.
	A few other minor fixes.
	* cmake/test/CMakeLists.txt: Remove __TEST__ (and __TEST_SLASH__?);
	no longer needed.

	* src/mod.c (gd_alter_crecip89): Accept cdividend=NULL for cdividend=(0,0)

2011-04-05   D. V. Wiebe <getdata@ketiltrout.net> svn:573
	Merge in updates from 0.7 branch, r512 and subsequent:

	* test/alter_crecip_zero.c test/alter_recip_zero.c: Added.
	* src/mod.c (_GD_Change): If [c]dividend is zero, don't change it, per
	documentation.

	* src/encoding.c (_GD_MissingFramework): Properly compute the module path.

	* src/flush.c (_GD_FieldSpec): For Standards Version >= 8, use new-style
	metafield syntax.

	* src/entry.c (gd_raw_filename): Clear dirfile error on entry.

	* test/move_data_enc_ar.c test/entry_phase.c test/get_ss.c
	test/alter_raw_type.c: Actually fail on error.

	* m4/version.m4 configure.ac: Fix library soversion defines.

	* m4/python.m4: Use the BSD `jot' if the Linux/Plan 9 `seq' is not found.
		Also, look for python2.7.  Added --with-python-module-dir.

	* src/add.c (_GD_Add): strdup ref_name when propagating upwards to prevent
	double-free when _GD_FreeD() is called.
	* test/add_raw_include.c: Added.

	* src/include.c (gd_include): If GD_CREAT is specified, but no encoding,
	inherit encoding from parent.

	* test/test.h: Explicitly use long long format types in the checks.  Write
	paths properly under WIN32/WIN64.

	* src/legacy.c (GetFormat): Fix memset call.

	* src/common.c (_GD_GetLine): Remove unused first_char.

	* src/raw.c (_GD_RawSeek): nread is a ssize_t.

	* bindings/python/pydirfile.c (gdpy_dirfile_putcarray): Remove unused ns.

	* bindings/f77/test/big_test.f bindings/f77/test/big_test95.f90