@@ -1,12 +1,12 @@
 * Locking
 * Hashed compressed files
-* streaming
+* Streaming/Appending
 * linterp table path munging [MH]
 * Make webpage suck less
 * Handle RW dirfile on RO data better [JPF]
 * INCLUDE name munging [RW/MT]
 * Fix VERSION leakage [MT]
-* Error count [MT]
 * aliasing [MT]
 * Fix REFERENCE spam [MT]
-* Fragment encapsulation [MT]
+* Fragment encapsulation [MT/CBN]
+* gd_error_count bindings
