@@ -1,6 +1,6 @@
 .\" gd_error.3.  The gd_error man page.
 .\"
-.\" Copyright (C) 2008, 2010 D. V. Wiebe
+.\" Copyright (C) 2008, 2010, 2011 D. V. Wiebe
 .\"
 .\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .\"
@@ -13,7 +13,7 @@
 .\" Texts.  A copy of the license is included in the `COPYING.DOC' file
 .\" as part of this distribution.
 .\"
-.TH gd_error 3 "25 May 2010" "Version 0.7.0" "GETDATA"
+.TH gd_error 3 "20 April 2011" "Version 0.8.0" "GETDATA"
 .SH NAME
 gd_error \(em report a GetData library error
 .SH SYNOPSIS
@@ -31,11 +31,6 @@ function returns the numeric dirfile error associated with the dirfile
 .I dirfile
 which is set by many GetData library functions.
 
-The 
-.I dirfile
-argument should point to a DIRFILE object previously created by a call to
-.BR gd_open (3).
-
 A textual description of the error may be obtained by calling
 .BR gd_error_string (3).
 
@@ -45,5 +40,5 @@ The
 function always returns the dirfile error corresponding to the error state of
 the last library call on the supplied DIRFILE object.
 .SH SEE ALSO
-.BR gd_open (3),
+.BR gd_error_count (3),
 .BR gd_error_string (3)
