@@ -1,6 +1,6 @@
 .\" gd_error_string.3.  The gd_error_string man page.
 .\"
-.\" Copyright (C) 2008, 2009, 2010 D. V. Wiebe
+.\" Copyright (C) 2008, 2009, 2010, 2011 D. V. Wiebe
 .\"
 .\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .\"
@@ -13,7 +13,7 @@
 .\" Texts.  A copy of the license is included in the `COPYING.DOC' file
 .\" as part of this distribution.
 .\"
-.TH gd_error_string 3 "3 November 2010" "Version 0.7.0" "GETDATA"
+.TH gd_error_string 3 "20 April 2011" "Version 0.8.0" "GETDATA"
 gd_error_string \(em report a GetData library error
 .SH SYNOPSIS
 .B #include <getdata.h>
@@ -53,11 +53,6 @@ using
 .BR free (3)
 when it is no longer needed.
 
-The 
-.I dirfile
-argument should point to a DIRFILE object previously created by a call to
-.BR gd_open (3).
-
 .SH RETURN VALUE
 If
 .I buffer
@@ -71,5 +66,5 @@ error state of
 .I dirfile
 is unchanged.
 .SH SEE ALSO
-.BR gd_open (3),
-.BR gd_error (3)
+.BR gd_error (3),
+.BR gd_error_string (3)
